--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
   "license": "MIT",
   "dependencies": {
     "angular": "^1.7.5",
+    "angular-animate": "^1.7.8",
+    "angular-aria": "^1.7.8",
     "angular-loader": "^1.7.5",
+    "angular-material": "^1.1.18",
+    "angular-messages": "^1.7.8",
     "angular-route": "^1.7.5",
+    "hammerjs": "^2.0.8",
     "html5-boilerplate": "0.0.1"
   },
   "devDependencies": {
